Tests/Resources/Bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/auto_1.st
language core;
extend with #type-reconstruction;

fn main(n : auto) -> Bool {
	return succ(n);
}